fix: display of circle, circle__template on mobile screens

--- a/src/assets/styles/_media.scss
+++ b/src/assets/styles/_media.scss
@@ -2,6 +2,28 @@
 
 // /. imports
 
+@keyframes spinAround525 {
+    0% {
+        transform: rotate(0deg) translate(calc(#{useRem(-350)} / 2)) rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg) translate(calc(#{useRem(-350)}/ 2)) rotate(-360deg);
+    }
+}
+
+@keyframes spinAround425 {
+    0% {
+        transform: rotate(0deg) translate(calc(#{useRem(-250)} / 2)) rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg) translate(calc(#{useRem(-250)}/ 2)) rotate(-360deg);
+    }
+}
+
+// /. variables
+
 @media screen and (max-width: 992px) {
     .about__wrapper.about__wrapper {
         grid-template-columns: 1fr;
@@ -30,77 +52,91 @@
 }
 
 @media screen and (max-width: 525px) {
-    .about .about__peview {
-        display: none;
-    }
-
-    .container.container {
-        padding: 0 useRem(20);
-    }
-
-    .about__wrapper.about__wrapper {
-        grid-template-areas:
-            'content'
-            'users';
-    }
-
-    // $circle-width: 350 !global;
-
-    // .circle__template.circle__template {
-    //     &:nth-child(1) {
-    //         width: useRem(30);
-    //         height: useRem(30);
-    //         animation-delay: -1s;
-    //     }
-
-    //     &:nth-child(1) {
-    //         animation-delay: -3s;
-    //         width: useRem(20);
-    //         height: useRem(20);
-    //     }
-
-    //     &:nth-child(2) {
-    //         animation-delay: -5s;
-    //         width: useRem(50);
-    //         height: useRem(50);
-    //     }
-
-    //     &:nth-child(3) {
-    //         animation-delay: -7s;
-    //         width: useRem(30);
-    //         height: useRem(30);
-    //     }
-
-    //     &:nth-child(4) {
-    //         animation-delay: -9s;
-    //         width: useRem(40);
-    //         height: useRem(40);
-    //     }
-
-    //     &:nth-child(5) {
-    //         animation-delay: -11s;
-    //         width: useRem(20);
-    //         height: useRem(20);
-    //     }
+    // .about .about__peview {
+    //     display: none;
     // }
 
-    // .circle__center.circle__center {
-    //     width: useRem(220);
-    //     height: useRem(220);
+    // .container.container {
+    //     padding: 0 useRem(20);
     // }
+
+    // .about__wrapper.about__wrapper {
+    //     grid-template-areas:
+    //         'content'
+    //         'users';
+    // }
+
+    .circle.circle {
+        width: useRem(350);
+        height: useRem(350);
+    }
+
+    .circle__template.circle__template {
+        animation-name: spinAround525;
+    }
+
+    .circle__center.circle__center {
+        width: useRem(220);
+        height: useRem(220);
+    }
 
     .container.container {
         padding: 0 useRem(20);
     }
 
     .about .about__wrapper {
-        padding: useRem(50) 0 useRem(20) 0;
+        padding: useRem(50) 0 0 0;
     }
-
 
 }
 
 @media screen and (max-width: 425px) {
+    .circle.circle {
+        width: useRem(250);
+        height: useRem(250);
+    }
+
+    .circle__center.circle__center {
+        width: useRem(150);
+        height: useRem(150);
+    }
+
+    .circle__template.circle__template {
+        animation-name: spinAround425;
+    }
+
+    .circle__template.circle__template {
+        &:nth-child(1) {
+            width: useRem(20);
+            height: useRem(20);
+        }
+
+        &:nth-child(1) {
+            width: useRem(15);
+            height: useRem(15);
+        }
+
+        &:nth-child(2) {
+            width: useRem(35);
+            height: useRem(35);
+        }
+
+        &:nth-child(3) {
+            width: useRem(20);
+            height: useRem(20);
+        }
+
+        &:nth-child(4) {
+            width: useRem(30);
+            height: useRem(30);
+        }
+
+        &:nth-child(5) {
+            width: useRem(15);
+            height: useRem(15);
+        }
+    }
+
     .about .about__title {
         font-size: useRem(42);
         line-height: useRem(52);
