--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,5 +1,4 @@
 $font-size: 16;
-$circle-width: 450 !default;
 $white-color: #FFF;
 $dark-color: #2D2D2D;
 $gray-color: #707070;
